# sombra-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
editor/: CMakeLists.txt  imgui.ini
editor/cmake/: Dependencies.cmake  ExternalImGui.cmake  ExternalImGuizmo.cmake  FindImGui.cmake
editor/src/: main.cpp
editor/src/editor/: AcceptPopUp.cpp  AcceptPopUp.h  ComponentPanel.cpp  ComponentPanel.h  DefaultScene.h  DefaultShaderBuilder.h  Editor.cpp  Editor.h  EntityPanel.cpp  EntityPanel.h  Gizmo.cpp  Gizmo.h  IEditorPanel.h  ImGuiInput.cpp  ImGuiInput.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiUtils.cpp  ImGuiUtils.h  ImGuiUtils.hpp  MenuBar.cpp  MenuBar.h  RepositoryPanel.cpp  RepositoryPanel.h  SceneNodesPanel.cpp  SceneNodesPanel.h  ViewportControl.cpp  ViewportControl.h
example/: CMakeLists.txt
example/res/: map.se  shaders
example/src/: main.cpp
example/src/game/: CharacterScript.cpp  CharacterScript.h  Game.cpp  Game.h  GameMenuController.cpp  GameMenuController.h  GameMenuView.h  IGameScreen.h  Level.cpp  Level.h  MainMenuController.cpp  MainMenuController.h  MainMenuView.h  NPCScript.cpp  NPCScript.h  PlayerController.cpp  PlayerController.h  SettingsMenuController.cpp  SettingsMenuController.h  SettingsMenuView.h
faze-engine/: CMakeLists.txt
faze-engine/doc/: Doxyfile.in
faze-engine/include/fe/app/: Application.h  AudioManager.h  CollisionManager.h  Entity.h  GraphicsManager.h  InputManager.h  PhysicsManager.h
faze-engine/include/fe/audio/: AudioEngine.h  Buffer.h  Source.h
faze-engine/include/fe/collision/: AABB.h  BoundingBox.h  BoundingSphere.h  CachedVector.h  CoarseCollisionDetector.h  Collider.h  CollisionDetector.h  CompoundCollider.h  ConcaveCollider.h  Contact.h  ContiguousVector.h  ConvexCollider.h  ConvexPolyhedron.h  EPACollisionDetector.h  FineCollisionDetector.h  GJKCollisionDetector.h  Graph.h  HACD.h  HalfEdgeMesh.h  HalfEdgeMeshExt.h  Manifold.h  MeshCollider.h  Polytope.h  QuickHull.h  SupportPoint.h  TerrainCollider.h
faze-engine/include/fe/graphics/: GraphicsSystem.h  ILayer.h  PrimitiveTypes.h  Program.h  Shader.h  Texture.h
faze-engine/include/fe/loaders/: EntityReader.h  FontReader.h  ImageReader.h  MaterialReader.h  MeshLoader.h  MeshReader.h  RawMesh.h  TerrainLoader.h  TerrainReader.h
faze-engine/include/fe/physics/: Constraint.h  ConstraintManager.h  Force.h  ForceManager.h  PhysicsEngine.h  PhysicsEntity.h  RigidBody.h  RigidBodyDynamics.h
faze-engine/include/fe/utils/: FileReader.h  Image.h  Logger.h
faze-engine/include/fe/window/: InputData.h  WindowSystem.h
faze-engine/src/fe/app/: Application.cpp  AudioManager.cpp  CollisionManager.cpp  GraphicsManager.cpp  InputManager.cpp  PhysicsManager.cpp
faze-engine/src/fe/audio/: AudioEngine.cpp  Buffer.cpp  Source.cpp
faze-engine/src/fe/collision/: AABB.cpp  BoundingBox.cpp  BoundingSphere.cpp  CoarseCollisionDetector.cpp  CoarseCollisionDetector.h  CollisionDetector.cpp  CompoundCollider.cpp  ConvexPolyhedron.cpp  EPACollisionDetector.cpp  Edge.cpp  Edge.h  FineCollisionDetector.cpp  GJKCollisionDetector.cpp  Geometry.cpp  Geometry.h  Graph.cpp  HACD.cpp  HACD.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  HalfEdgeMeshExt.cpp  MeshAdjacencyData.cpp  MeshAdjacencyData.h  MeshCollider.cpp  Polytope.cpp  Polytope.h  QuickHull.cpp  QuickHull.h  SupportPoint.cpp  TerrainCollider.cpp  Triangle.cpp  Triangle.h
faze-engine/src/fe/graphics/: GLWrapper.h  GraphicsSystem.cpp  Program.cpp  Shader.cpp  Texture.cpp
faze-engine/src/fe/loaders/: EntityReader.cpp  FontReader.cpp  ImageReader.cpp  MaterialReader.cpp  MeshLoader.cpp  MeshReader.cpp  (+2 more)
faze-engine/test/: tests.cpp
game/: CMakeLists.txt
game/res/materials/: game_materials.fzmat  game_materials.semat
game/res/meshes/: test.fzmsh  test.gltf  test.semsh
game/res/shaders/: 2D.vert  3D.frag  3D.vert  fragment2D.glsl  fragment3D.glsl  fragmentCombineHDR.glsl  fragmentConvoluteCubeMap.glsl  fragmentCubeMap.glsl  fragmentDeferredLighting.glsl  fragmentGBufMaterial.glsl  fragmentGBufSplatmap.glsl  fragmentGaussianBlur.glsl  fragmentPBR.glsl  fragmentSplatmap.glsl  fragmentTex3DViewer.glsl  fragmentVoxelization.glsl  geometryTerrain.glsl  geometryVoxelization.glsl  vertex2D.glsl  vertex3D.glsl  vertex3DSkinning.glsl  vertexLight.glsl  vertexLightSkinning.glsl  vertexNormalMap.glsl  vertexNormalMapSkinning.glsl  vertexPBR.glsl  vertexPBRSkinning.glsl  vertexTerrain.glsl  vertexTex3DViewer.glsl  vertexVoxelization.glsl
game/src/: main.cpp
game/src/game/: Game.cpp  Game.h  GameCommands.cpp  GameCommands.h  GameMenuController.cpp  GameMenuController.h  GameMenuView.h  IGameScreen.h  Level.cpp  Level.h  MainMenuController.cpp  MainMenuController.h  MainMenuView.h  PlayerController.cpp  PlayerController.h  SettingsMenuController.cpp  SettingsMenuController.h  SettingsMenuView.h
sombra/: CMakeLists.txt
sombra-engine/: CMakeLists.txt
sombra-engine/doc/: Doxyfile.in
sombra/cmake/: Dependencies.cmake  ExternalAudioFile.cmake  ExternalFreeType.cmake  ExternalGLEW.cmake  ExternalGLFW.cmake  ExternalGLM.cmake  ExternalGTest.cmake  ExternalLuaJIT.cmake  ExternalMiniaudio.cmake  ExternalNlohmannJSON.cmake  ExternalOpenAL.cmake  ExternalSTB.cmake  ExternalSol2.cmake  FindFreeType.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindGTest.cmake  FindMiniaudio.cmake  FindNlohmannJSON.cmake  FindOpenAL.cmake  FindSTB.cmake
sombra/res/shaders/: fragment3D.glsl  fragmentCombineHDR.glsl  fragmentDeferredAmbient.glsl  fragmentDeferredLighting.glsl  fragmentDeferredLightingCSM.glsl  fragmentDeferredLightingPLShadows.glsl  fragmentEquiToCubeMap.glsl  fragmentFXAA.glsl  fragmentGBufViewer.glsl  fragmentGaussianBlur.glsl  fragmentMergeShadows.glsl  fragmentPrecomputeBRDF.glsl  fragmentPrefilterCubeMap.glsl  fragmentSSAO.glsl  fragmentSkyBox.glsl  fragmentTex3DClear.glsl  fragmentToNormalLocal.glsl  fragmentToNormalTangent.glsl  fragmentVoxelization.glsl  vertex2D.glsl  vertex3DSkinning.glsl  vertexNormalMapSkinning.glsl  vertexParticlesFaceCamera.glsl  vertexTex3DClear.glsl  vertexTex3DViewer.glsl
(+1215 files in other folders)
